--- a/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
+++ b/1_Deploy_and_Learn_ChatQnA_Xeon_Kubernetes.ipynb
@@ -680,7 +680,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 4.3 Reranker Microservice (POD:chatqna-teirerank:80)\n",
+    "#### 4.3 Reranker Microservice (POD:chatqna-teirerank:80)\n",
     "The Reranking Microservice, fueled by reranking models, is a straightforward yet immensely potent tool for semantic search. When provided with a query and a collection of documents, reranking swiftly reorders the documents based on their semantic relevance to the query, arranging them from most to least pertinent. This microservice significantly enhances overall accuracy. You will commonly use either a dense embedding model or a sparse lexical search index in a text retrieval system to retrieve relevant text documents based on the user's input. A reranking model improves the results by rearranging potential candidates into a final, optimized order.\n",
     "\n",
     "OPEA has [multiple options](https://github.com/opea-project/GenAIComps/tree/main/comps/rerankings) for re-rankers. For this lab, you'll use the Hugging Face TEI for re-ranking. It is the `chatqna-teirerank` microservice in your cluster.\n",
@@ -764,7 +764,7 @@
    "id": "c55595d8-c5e6-4da1-8180-d2f7d0e61376",
    "metadata": {},
    "source": [
-    "### 4.4 LLM microservice (POD:chatqna-vllm:80)\n",
+    "#### 4.4 LLM microservice (POD:chatqna-vllm:80)\n",
     "The heart of the RAG application is the Large Language Model (LLM), which is the primary focus of your efforts. As mentioned in the introduction, you leverage RAG to enhance LLM performance.\n",
     "\n",
     "LLM offerings can generally be divided into two main categories: closed models and open source models that you can run locally. Each type has its own advantages and disadvantages. This microservice architecture provides the flexibility to choose between these models, accommodating a variety of LLMs that can be broadly classified as either closed or open source.\n",
